# tiago_robot-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
config/: gravity_compensation_controller_parker.yaml  joint_state_broadcaster.yaml  omni_base_joint_state_broadcaster.yaml  tiago_configuration.yaml
config/joy_teleop/: joy_teleop_omni_base.yaml
config/motion_planner/: motion_planner.yaml.em  motion_planner_pal-gripper.yaml  motion_planner_pal-hey5.yaml
config/motions/: tiago_motions_custom.yaml  tiago_motions_pal-gripper.yaml  tiago_motions_pal-hey5.yaml  tiago_motions_robotiq-2f-140.yaml  tiago_motions_robotiq-epick.yaml
config/twist_mux/: twist_mux_locks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
launch/: default_controllers.launch.py  gravity_compensation_controller.launch.py  tiago_bringup.launch.py  tiago_play_motion2.launch.py  twist_mux.launch.py
module/: 20_robot_state_publisher.yaml  joystick.yaml
robots/: tiago.urdf.xacro
rpm/: ros-humble-tiago-bringup.spec  ros-humble-tiago-controller-configuration.spec  ros-humble-tiago-description.spec  ros-humble-tiago-robot.spec  ros-indigo-tiago-description.spec  template.spec
tiago_bringup/: CHANGELOG.rst
tiago_bringup/launch/: joystick_teleop.launch.py  tiago_bringup.launch.py  tiago_play_motion2.launch.py
tiago_bringup/module/: play_motion2.yaml
tiago_controller_configuration/: CHANGELOG.rst  package.xml
tiago_controller_configuration/config/: arm_controller.yaml  gravity_compensation_controller.yaml  gravity_compensation_controller_ilm.yaml  head_controller.yaml
tiago_controller_configuration/launch/: default_controllers.launch.py  gravity_compensation_controller.launch.py
tiago_controller_configuration/module/: 10_default_controllers.yaml  20_default_controllers.yaml
tiago_description/: CHANGELOG.rst  CMakeLists.txt  launch_arguments.py  package.xml
tiago_description/config/: tiago_configuration.yaml
tiago_description/gazebo/: gazebo.urdf.xacro
tiago_description/launch/: robot_state_publisher.launch.py  show.launch.py
tiago_robot/: CHANGELOG.rst  package.xml
(+22 files in other folders)
